--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!doctype html>
 <html> 
  <head>
+ <!-- Google tag (gtag.js) -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q02BP5Q1MQ"></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q02BP5Q1MQ');
+
+</script>
  <title> my info </title>
   <style>
      *{
