--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
      }
    </style> 
  </head> 
- <body align="center" bgcolor="pink"> 
+ <body align="center" bgcolor="skyblue"> 
   <div class="intro" align="center"> 
    <div class="inttext"> 
     <p> <font style="roboto" size="6"><b>This website was developed by one of the G.G.O.A.T <u>(Greatest Genius Of All Time)</u> <b><u>"<font color="orange">RANGARAJA CHOWDARI</font>"</u></b>. He developed this website with his own skill and knowledge in HTML and CSS <br> </b></font></p><b> <br> </b> 
